# rsound-wasm-synth

./: .eslintrc.js  .gitignore  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  webpack.config.js
src/: lib.rs  modulator.rs
src/syntherpreter/: envelope.rs  mod.rs  modulator.rs  synth.rs  units.rs
ts/: all.tsx  data.ts  display.css  display.tsx  index.ts  index.tsx  interface.tsx  keyboard.css  keyboard.tsx  player.ts  site.tsx
ts/synth/: chain.css  chain.tsx  envelope.css  envelope.tsx  modulator.css  modulator.tsx  source.css  source.tsx
www/: index.html  index.js
www/src/: index.ts
