[package]
name = "rsound-wasm-synth"
description = "A modular WASM synth"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
note = { version="^0", path="../rsound-note" }
instrument = { version="^0", path="../rsound-instrument" }
graph = { version="^0", path="../rsound-graph" }
rsound-output = { version="^0", path="../rsound-output" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'SvgElement',
  'Node',
  'Window',
]

[features]
